refactor: Migrate comment DTOs to records and enhance service methods with improved validation and documentation
- Converted `CommentResponse`, `CommentCreateRequest`, and `CommentUpdateRequest` to Java records for immutability and conciseness.
- Added validation annotations with descriptive messages to ensure consistent data integrity.
- Updated `CommentService` with clear method-level documentation and streamlined logic.
- Enhanced `Comment` entity with additional helper methods and detailed comments for better clarity and maintainability.